:lipstick: Fix logo svg & checkmark style

--- a/client/components/Missions/MissionData.sass
+++ b/client/components/Missions/MissionData.sass
@@ -28,10 +28,11 @@
   &:after
     content: ''
     display: block
-    width: 0.5em
-    height: 0.8em
+    width: 0.6em
+    height: 0.9em
+    margin-top: -0.25em;
     border: solid $color-violet-blue
-    border-width: 0 2px 2px 0
+    border-width: 0 0.2em 0.2em 0
     transform: rotate(45deg)
 
 .crossmark
