:lipstick: Fix styles

--- a/client/components/Missions/Missions.sass
+++ b/client/components/Missions/Missions.sass
@@ -36,7 +36,7 @@
   margin: auto 0
   font-weight: bold
   color: $text-light
-  background-color: darken($color-royal-fuchsia, 10)
+  background-color: $color-royal-fuchsia
   border-radius: 0.5em
   border: none
   outline: none
@@ -48,7 +48,8 @@
   
   > p
     font-size: 0.75em
-    color: darken($text-light, 20)
+    margin-bottom: 0.2em
+    color: darken($text-light, 15)
 
   &[data-active="true"]
     cursor: pointer
